--- a/src/Components/Carousel/Carousel.scss
+++ b/src/Components/Carousel/Carousel.scss
@@ -32,3 +32,12 @@
     }
 
 }
+@media screen and (max-width:400px) {
+    .carousel{
+        &__item{
+            img{
+                height: 600px;
+            }
+        }
+    }
+}
