--- a/src/Components/Notice/Notice.scss
+++ b/src/Components/Notice/Notice.scss
@@ -55,3 +55,83 @@
         }
     }
 }
+@media screen and (max-width:460px) {
+    .notice{
+        &__navigation{
+            ul{
+                padding-left:0px;
+            }
+        }
+        &__content{
+            &__table{
+            
+                border-top:none;
+                caption{
+                    font-size:3rem;
+                    text-align: center;
+                    padding-left:25px;
+
+                }
+            }
+
+
+                /* Force table to not be like tables anymore */
+            table, thead, tbody, th, td, tr { 
+                display: block; 
+               display:run-in;
+            }
+            
+            /* Hide table headers (but not display: none;, for accessibility) */
+            thead tr { 
+                // position: absolute;
+                // top: -9999px;
+                // left: -9999px;
+            }
+            
+            tr { border: 1px solid #ccc; margin:20px 0px; }
+            
+            td { 
+                /* Behave  like a "row" */
+                border: none;
+                border-bottom: 1px solid #eee; 
+                position: relative;
+                padding-left: 50%; 
+            }
+        
+            td:before { 
+                /* Now like a table header */
+                position: absolute;
+                /* Top/left values mimic padding */
+                top: 6px;
+                left: 6px;
+                width: 45%; 
+                padding-right: 10px; 
+                white-space: nowrap;
+            }
+            }
+        }
+}
+@media screen and (max-width:350px) {
+    .notice{
+        &__content{
+            &__table{
+                caption{
+                    padding-left:20px;
+                    font-size:2.8rem;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width:323px) {
+    .notice{
+        &__content{
+            &__table{
+                caption{
+                    padding-left:10px;
+                    font-size:2.5rem;
+                }
+            }
+        }
+    }
+}
