--- a/src/Components/CoreBusiness/CoreBusiness.scss
+++ b/src/Components/CoreBusiness/CoreBusiness.scss
@@ -133,6 +133,7 @@ $bg-button-contact:#5C5E66;
                     width: 70px;
                     height: 40px;
                     object-fit: cover;
+                    cursor: pointer;
                 }
             }
           
