--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -3,6 +3,7 @@ $color-logo:#fff;
 
 $color-navScroll:#111;
 $color-logoScroll:rgb(47, 161, 37);
+
 .header{
     display: flex;
     justify-content: space-between;
@@ -18,6 +19,7 @@ $color-logoScroll:rgb(47, 161, 37);
     z-index: 9999;
 
     transition: all 1.2s;
+    animation: openNav 0.3s linear 0s 1;
     &__close{
         display: none;
     }
@@ -80,6 +82,8 @@ $color-logoScroll:rgb(47, 161, 37);
     right: 0;
     z-index: 9999;
     transition: all 1.2s;
+
+    animation: openNav 0.3s linear 0s 1;
     &__close{
         display: none;
     }
@@ -284,5 +288,13 @@ $color-logoScroll:rgb(47, 161, 37);
         .MuiSvgIcon-root{
             font-size:2rem;
         }
+    }
+}
+@keyframes openNav {
+    0%{
+        transform: translateX(-350px);
+    }
+    100%{
+        transform: translateX(0px);
     }
 }
